# EppoCoreTemplate

./: .gitignore  CMakeLists.txt
EppoApp/: premake5.lua
EppoApp/Source/: EppoApp.cpp
